--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
+
+        <Button
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"/>
 
     </LinearLayout>
 
