--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,17 @@
             android:layout_height="wrap_content"
             android:text="Refresh"/>
 
+        <Spinner
+            android:id="@+id/algorithmSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/applySortButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start"/>
+
     </LinearLayout>
 
 </layout>
