--- a/Visual-Sort/app/src/main/res/layout/activity_main.xml
+++ b/Visual-Sort/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".presentation.MainActivity">
 
+    <!-- Used as a container for Fragments -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
