--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,13 @@
             android:layout_height="wrap_content"
             android:text="Start"/>
 
+        <com.google.android.material.slider.Slider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:valueFrom="10.0"
+            android:valueTo="100.0"
+            android:stepSize="1.0"
+            android:value="@={homeViewModel.size}"/>
     </LinearLayout>
 
 </layout>
