--- a/Visual-Sort/app/src/main/res/values/colors.xml
+++ b/Visual-Sort/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#1f242b</color>
+    <color name="colorPrimaryDark">#1f242b</color>
+    <color name="colorAccent">#28abb9</color>
+
+    <color name="primaryBlue">#28abb9</color>
+    <color name="primaryBlueHalfOpacity">#7f28abb9</color>
+    <color name="primaryRed">#ed6663</color>
+    <color name="primaryYellow">#ffe05d</color>
+    <color name="primaryGreen">#b8de6f</color>
+
 </resources>
