--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -49,13 +49,17 @@
                     android:layout_weight="1" />
                 <!--Spacing -->
 
-                <ImageView
-                    android:id="@+id/searchButton"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                <ImageButton
+                    android:id="@+id/infoButton"
+                    android:layout_width="35dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/scale"
-                    android:tint="@android:color/white"/>
+                    android:paddingHorizontal="5dp"
+                    android:src="@drawable/info"
+                    android:background="@drawable/feedback_button_selector"
+                    android:tint="@android:color/white"
+                    android:scaleType="fitCenter"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
 
