--- a/Visual-Sort/app/src/main/res/layout/info_dialog.xml
+++ b/Visual-Sort/app/src/main/res/layout/info_dialog.xml
@@ -46,7 +46,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:textSize="16sp"
-                    android:textColor="@android:color/white"/>
+                    android:textColor="@android:color/white"
+                    android:textAlignment="center"/>
 
                 <TableLayout
                     android:layout_width="match_parent"
